# divine-blossom

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.local  LICENSE  OAUTH_SETUP.md  README.md  config-store-data.json  config.json.example  dist-workspace.toml  docker-compose.local.yml  fastly.toml  fastly.toml.docker  fastly.toml.example  fastly.toml.local  mise.toml  secret-store-data.json.example  secrets.json.example
.claude-plugin/: marketplace.json  plugin.json
blossom-core/: Cargo.toml
cloud-run-transcoder/: Cargo.toml  Dockerfile  backfill-prioritized.sh  backfill-vtt-direct.sh  backfill-vtt-force.sh  backfill-vtt.sh  backfill.sh  deploy.sh  repair_recent_bad_vtts.py  scan_and_repair_vtts.py
cloud-run-upload/: Cargo.toml  Dockerfile  deploy.sh
docs/: logging.md  workflows.md
examples/: README.md  autoresearch-workflow.py  feature-workflow.py  ouija_workflow.py  review-workflow.py  simple-loop-workflow.py
hooks/: hooks.json
opencode-plugin/: ouija.ts
scripts/: backfill_missing_transcripts.sh  block-interactive-prompts.sh  check-pending-replies.sh  debug_upload_harness.py  deploy-cloud-function.sh  monitor-vcl-cache.sh  ouija-prompt-submit.sh  ouija-register.sh  ouija-statusline.sh  ouija-unregister.sh  setup-logging-gcs.sh  smoke-test-vcl.sh  test-admin-content-bypass.sh  test-gcs-integration.sh
src/: admin.rs  api.rs  auth.rs  blossom.rs  c2pa.rs  config.rs  daemon_protocol.rs  delete_policy.rs  error.rs  hooks.rs  lib.rs  logging.rs  main.rs  mcp.rs  media_auth_log.rs  metadata.rs  nostr_transport.rs  persistence.rs  project_index.rs  protocol.rs  req_id.rs  resumable_complete.rs  router.rs  scheduler.rs  server.rs  session_agent.rs  state.rs  storage.rs  tmux.rs  tmux_var.rs  transport.rs  viewer_auth.rs  workflow.rs
vcl/: deliver.vcl  error.vcl  fetch.vcl  recv.vcl
(+51 files in other folders)
